2009-01-11 Borut Razem <borut.razem AT siol.net>

	* Makefile.in: added SDCC_ASRANLIB to PKGS

2009-01-10 Borut Razem <borut.razem AT siol.net>

	* support/scripts/sdcc.nsi: added asranlib.exe to the install package
	* .version, doc/sdccman.lyx: bumped sdcc version to 2.8.7
	  due added support for ar format libraries

2009-01-09 Borut Razem <borut.razem AT siol.net>

	* as/asranlib/Makefile.in, as/asranlib/asranlib.dsp,
	  as/asranlib/asranlib.c: added asranlib
	* as/link/lkar.c, as/link/lkar.h: added support for ar format libraries
	* Makefile.in, as/link/hc08/Makefile.in,
	  as/link/hc08/link_hc08.dsp, as/link/lklib.c, as/link/lklibr.c,
	  as/link/lklibr.h, as/link/lkrel.c, as/link/lkrel.h,
	  as/link/lksdcclib.c, as/link/mcs51/Makefile.in,
	  as/link/mcs51/aslink.dsp, as/link/z80/Makefile.in,
	  as/link/z80/linkgbz80.dsp, as/link/z80/linkz80.dsp, configure,
	  configure.in, sdcc.dsw: modified to support ar format libraries

2009-01-08 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCast.c (decorateType RETURN): use RESULT_TYPE_GPTR for generic
	  pointer return

2009-01-05 Philipp Klaus Krause <pkk AT spth.de>

	* sim/ucsim/z80.src/inst_ed.cc:
	  Fixed bug #2488074, which made regression tests fail.

2009-01-05 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/z80/mod.s,
	  device/lib/z80/div.s,
	  device/lib/z80/mulchar.s,
	  device/lib/z80/mul.s,
	  device/lib/z80/divsigned.s,
	  device/lib/z80/Makefile.in:
	  Implemented RFE #1702376.

2009-01-05 Borut Razem <borut.razem AT siol.net>

	* as/link/lksdcclib.c:
	  fixed linker hanging in INDEXLIB is not defined (hc08)

2009-01-04 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Implemented RFE #2485684, and some further improvements of HL caching
	  including a bugfix.
	* src/z80/peeph-z80.def:
	  Fixed a bug exposed by implementing RFE #2485684.

2009-01-04 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peeph-z80.def:
	  Peephole improvements.
	* src/z80/gen.c,
	  src/z80/main.c,